[package]
name = "mptcp"
description = "A helper crate to create MPTCP sockets"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/gdetal/mptcp-rs"

[features]
default = ["std"]
std = []
tokio = ["dep:tokio", "dep:async-trait"]
async-std = ["dep:async-std", "dep:async-trait"]

[[example]]
name = "server-std"
required-features = ["std"]

[[example]]
name = "client-std"
required-features = ["std"]

[[example]]
name = "server-tokio"
required-features = ["tokio"]

[[example]]
name = "client-tokio"
required-features = ["tokio"]

[[example]]
name = "client-async-std"
required-features = ["async-std"]

[dependencies]
libc = "0.2.153"
socket2 = "0.5.6"
sysctl = "0.5.5"

[dependencies.tokio]
version = "1"
features = ["net"]
optional = true

[dependencies.async-std]
version = "1"
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true

[dev-dependencies]
async-h1 = "2.3.4"
axum = "0.7.5"
bytes = "1.6.0"
http-body-util = "0.1.1"
http-types = "2.12.0"
hyper = { version = "1.3.1", features = ["client"] }
hyper-util = { version = "0.1.3", features = ["tokio", "server"] }
tokio = { version = "1", features = ["full"] }
tower-service = "0.3.2"
